<resources>
    <string name="app_name">Weather</string>
    <string name="location">Location</string>
    <string name="temp">Current Temperature</string>
    <string name="change_city">Change city</string>
    <string name="last_update">Last updated</string>
    <string name="details">Details</string>
    <string name="background_color">#7EBDF5</string>
    <string name="paypal">http://paypal.me/benevolentcorp</string>
    <string name="customer_support">Customer Support: benevolentcorp@gmail.com</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">3174ae27647585ea9b772b277aeeb5f2</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="about">About</string>
    <string name="about_text">Written by Benevolent Corp.</string>
    <string name="menu_refresh">Refresh</string>

    <string name="humidity_label">Humidity: </string>
    <string name="pressure_label">Pressure: </string>
    <string name="last_update_label">Last update: </string>
    <string name="change_city_dialog_title">Change City</string>
    <string name="go_button_text">Go</string>

</resources>
